--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="nav bd-grid">
                 <div>
                     <a href="#home">
-                    <img src="Rotary_International_Logo-500-removebg-preview.png"  alt="rotatry logo" class="logo-img">
+                    <img src="stranger titlee 001.png"  alt="rotatry logo" class="logo-img">
                 </a>
                 </div>
 
@@ -42,8 +42,9 @@
                 </div>
             </nav>
         </header>
-           <!-- home page -->
-        <section class="home-bd-grid" id="home">
+
+        <!-- home page -->
+        <section class="home bd-grid" id="home">
             <!-- <img src="downloadImage.png" alt="" class="ro-img"> -->
             <div class="txt-container">
                 <img src="downloadImage.png" alt="" class="ro-img">
@@ -59,10 +60,10 @@
         </section>
 
         <!-- about section -->
-         <section id="about" class="about">
+         <section id="about" class="about ">
          <div class="services">
           <div class="container">
-            <h1 class="sub-title"><span style="color: violet;">ABO</span>UT</h1>
+            <h1 class="sub-title">AB<span style="color: violet;">OUT</span></h1>
             <div class="services-list">
               <div>
                 <img src="Rotary_International_Logo-500-removebg-preview.png" class="pic">
@@ -122,7 +123,7 @@
 
       <!-- previous events -->
 
-       <section id="prv-projects" class="prv-projects">
+       <section id="prv-projects" class="prv-projects bd-grid">
         <div class="container">
             <h1 class="sub-title"><span style="color: violet;">PREVIOUS</span> PROJECTS</h1>
             <div class="projects">
