--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         
                         <li class="nav__item"><a href="#about" class="nav__link">ABOUT</a></li>
                         <li class="nav__item"><a href="#prv-projects" class="nav__link">PREVIOUS PROJECTS</a></li>
-                        <li class="nav__item"><a href="#Achievements" class="nav__link">EVENTS</a></li>
-                        <li class="nav__item"><a href="#Resume" class="nav__link">MEMBERS</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">REGISTRATION</a></li>
+                        <li class="nav__item"><a href="#Events" class="nav__link">EVENTS</a></li>
+                        <li class="nav__item"><a href="#Members" class="nav__link">MEMBERS</a></li>
+                        <li class="nav__item"><a href="#Registration" class="nav__link">REGISTRATION</a></li>
                     </ul>
                 </div>
 
@@ -45,18 +45,20 @@
 
         <!-- home page -->
         <section class="home bd-grid" id="home">
-            <!-- <img src="downloadImage.png" alt="" class="ro-img"> -->
+            
             <div class="txt-container">
                 <img src="downloadImage.png" alt="" class="ro-img">
                 <h1 class="title">ROTARACT CLUB OF CHENNAI RADIANCE RAISERS</h1>
-                <h4 class="title-2">FAMILY OF ROTRARY CLUB OF CHENNAI RADIANCE</h4>
-                <h4 class="title-2">ROTARY INTERNATIONAL DISTRICT 3233</h4>
+                <!-- <h4 class="title-2">FAMILY OF ROTRARY CLUB OF CHENNAI RADIANCE</h4>
+                <h4 class="title-2">ROTARY INTERNATIONAL DISTRICT 3233</h4> -->
                 <div class="box-container">
                     <div class="tag">PROUDLY PRESENTS </div>
                 </div>
            <div>
             <img src="stranger titlee 001.png" alt="" class="home-img">
            </div>
+
+           <div id="countdown-timer" class="box-container" style="font-size: 1.5rem; color: white; text-align: center; margin-top: 20px;"></div>
         </section>
 
         <!-- about section -->
