--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        
+                        <li class="nav__item"><a href="#home" class="nav__link">HOME</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">ABOUT</a></li>
                         <li class="nav__item"><a href="#prv-projects" class="nav__link">PREVIOUS PROJECTS</a></li>
                         <li class="nav__item"><a href="#Events" class="nav__link">EVENTS</a></li>
