--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <body>
       <video class="video-background" autoplay muted loop>
         <source src="BACKGROUND.mp4" type="video/mp4">
-        
       </video>
 
         <!--===== HEADER =====-->
@@ -299,7 +298,7 @@
                         <div class="card__data">
 
                             <h2 class="card__title">Art and Photography Events</h2>
-                            <a href="onstage-events.html" class="card__button" target="_blank" >EXPLORE</a>
+                            <a href="art&photo.html" class="card__button" target="_blank" >EXPLORE</a>
         
                         </div>
                     </article>
