--- a/art&photo.html
+++ b/art&photo.html
@@ -180,7 +180,9 @@
                          <img src="EVENTS/COLOUR PAINTING.jpg" alt="">
                            <div class="card-content">
                              <h3 class="card-title">Colour Painting</h3>
-                             <p class="card-description">1. This is a national online event open to individual participants. 
+                             <p class="card-description"> </p>
+                             <div class="more-content">
+                               <p>1. This is a national online event open to individual participants. 
                               2. Participants must record a 1-2 minute timelapse video of their painting process as 
                               evidence of originality. 
                               3. The original artwork and the reference image used for the painting must be submitted 
@@ -197,9 +199,7 @@
                               10. The judges’ decisions will be final and binding. 
                               11. Participants are expected to adhere to the event rules and maintain professional 
                               behavior. 
-                              12. Any violation of the rules will lead to disqualification. </p>
-                             <div class="more-content">
-                               <p></p>
+                              12. Any violation of the rules will lead to disqualification.</p>
                              </div>
                            </div>
                            <button class="learn-more">RULES & REGULATIONS</button>
